--- a/index.html
+++ b/index.html
@@ -36,23 +36,31 @@
                     </li>
                 </ul>
             </div>
-            <div class="icon-menu" ><img class="menu-hamburguer" src="./assets/img/menu-hamburguer.png" alt="">  </div>
+            <div class="icon-menu">
+                <img class="menu-hamburguer" src="./assets/img/menu-hamburguer.png" alt=""> </div>
         </div>
     </nav>
     <header>
         <div id="slider">
             <div>
                 <img src="./assets/img/slider1.jpg" alt="Imagem de um rosto de uma mulher coberto pela metade do lado esquerdo por uma sombra de números binários, e ela está sendo apontada por um braço humano de um lado e do outro por um braço robótico. ">
-                <h3><span>Vamos programar o futuro</span></h3>
+                <h3>
+                    <span>Vamos programar o futuro</span>
+                </h3>
             </div>
             <div>
                 <img src="./assets/img/mulher-tech.jpg" alt="Descrição da foto do carousel">
-                <h3><span>Desenvolvendo Divas <br> Divas Desenvolvedoras</span></h3>
+                <h3>
+                    <span>Desenvolvendo Divas
+                        <br> Divas Desenvolvedoras</span>
+                </h3>
             </div>
             <div>
                 <img src="./assets/img/web-acessibilty_blog.jpg" alt="Descrição da foto do carousel">
-                <h3><span>Precisamos falar sobre
-                    <strong>Acessibilidade Web</strong></span>
+                <h3>
+                    <span>Precisamos falar sobre
+                        <strong>Acessibilidade Web</strong>
+                    </span>
                 </h3>
             </div>
         </div>
@@ -82,7 +90,9 @@
                     </div>
                 </div>
                 <div class="title">
-                    <p><br>   Incentivar o desenvolvimento de sites <br> e aplicativos acessíveis</p>
+                    <p>
+                        <br> Incentivar o desenvolvimento de sites
+                        <br> e aplicativos acessíveis</p>
                     <div class="cards">
                         <div>
                             <p>
