--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li>
                         <a href="acessibilidade-web.html">Acessibilidade Web</a>
                     </li>
+                    <li class="fechar"><a href="#">^</a></li>
                 </ul>
             </div>
             <div class="icon-menu">
